2011-02-07  Chris Fleizach  <cfleizach@apple.com>
  
        Reviewed by Darin Adler.
        
        WAI-ARIA @aria-sort not exposed on rowheader and columnheader roles
        https://bugs.webkit.org/show_bug.cgi?id=53842

        * platform/mac/accessibility/aria-sort-expected.txt: Added.
        * platform/mac/accessibility/aria-sort.html: Added.

2011-02-07  Martin Robinson  <mrobinson@igalia.com>

        Reviewed by Daniel Bates.

        [GTK] fast/history/history-subframe-with-name.html fails with GTK DRT
        https://bugs.webkit.org/show_bug.cgi?id=44784

        * platform/gtk/Skipped: Unskip tests which are now passing.

2011-02-07  Yi Shen  <yi.4.shen@nokia.com>

        Reviewed by Tor Arne Vestbø.

        [Qt] Fix LayoutTests/media/restore-from-page-cache.html
        https://bugs.webkit.org/show_bug.cgi?id=53621

        Unskip media/restore-from-page-cache.html for Qt.

        * platform/qt/Skipped:

2011-02-07  Ilya Tikhonovsky  <loislo@chromium.org>

        Unreviewed.

        Chromium: three tests temporary disabled for rebaseline after r77781

        * platform/chromium/test_expectations.txt:

2011-02-04  Pavel Podivilov  <podivilov@chromium.org>

        Reviewed by Yury Semikhatsky.

        Web Inspector: implement beautification of scripts inlined in html documents.
        https://bugs.webkit.org/show_bug.cgi?id=52706

        * http/tests/inspector/debugger-test2.js:
        (initialize_DebuggerTest.InspectorTest.setBreakpointInVisibleView):
        * inspector/debugger-breakpoints-not-activated-on-reload.html:
        * inspector/debugger-pause-on-breakpoint.html:

2011-02-07  Ilya Tikhonovsky  <loislo@chromium.org>

        Unreviewed.

        Chromium: add explicit "Passed" expectations for the tests which have "failed" expectations in platfrom/mac
        The problem was introduced at r77719.
        I have to do that because platform/mac is in the list of baseline folders.