@@ -1,3 +1,15 @@
+2011-02-03  Zhenyao Mo  <zmo@google.com>
+
+        Reviewed by Kenneth Russell.
+
+        Crash in glDrawArrays with NaCl crystal model
+        https://bugs.webkit.org/show_bug.cgi?id=52831
+
+        * html/canvas/WebGLRenderingContext.cpp: Allocate large enough buffer for atttrib0 if it's enabled and not used.
+        (WebCore::WebGLRenderingContext::initVertexAttrib0):
+        (WebCore::WebGLRenderingContext::simulateVertexAttrib0):
+        * html/canvas/WebGLRenderingContext.h:
+
 2011-02-06  Chris Fleizach  <cfleizach@apple.com>
 
         Reviewed by Darin Adler.
