@@ -1,3 +1,13 @@
+2011-02-03  Zhenyao Mo  <zmo@google.com>
+
+        Reviewed by Kenneth Russell.
+
+        Crash in glDrawArrays with NaCl crystal model
+        https://bugs.webkit.org/show_bug.cgi?id=52831
+
+        * fast/canvas/webgl/gl-vertex-attrib-zero-issues-expected.txt: Added.
+        * fast/canvas/webgl/gl-vertex-attrib-zero-issues.html: Added.
+
 2011-02-07  Chris Fleizach  <cfleizach@apple.com>
   
         Reviewed by Darin Adler.
